# embedded-experiments-rs

./: README.md  build.ps1  setup-ubuntu
app/: Cargo.toml  openocd.gdb
bootloader/: Cargo.toml
bootloader/src/: main.rs
src/app/: Cargo.toml
src/bootloader/: Cargo.toml
src/bootloader/.cargo/: config
src/bootloader/src/: main.rs
src/stm32f3-discovery/: Cargo.toml  memory.bootloader.x
stm32f3-discovery/: Cargo.toml  build.rs  memory.application.x  memory.bootloader.x
